# W209-Viz-Drought-in-CA

./: .gitignore  README.md  pyproject.toml
data/drought_monitor/: README.md  cattle_inventory_drought.csv  drought_miles_area_by_county.csv  drought_pct_area.csv  drought_pct_area_by_county.csv  dsci_by_county.csv  population_in_drought.csv  rice_production_drought.csv
data/dry_well/: README.md  dry_well_reporting.csv
data/rma/: README.md  ca_drought_insr_losses.csv
