[project]
name = "w209-final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Kenneth Lin",email = "kenneth.alex.lin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair (>=5.5.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "vega-datasets (>=0.9.0,<0.10.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "dbfread (>=2.0.7,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
